add_executable(NekoDrawTriangle main.cpp)
target_link_libraries(NekoDrawTriangle PRIVATE Vulkan::Vulkan NEKO glfw)
NEKO_CONFIG_CXX_LANG(NekoDrawTriangle)

file(GLOB VERTEX_SHADERS Shaders/*.vert)
file(GLOB FRAGMENT_SHADERS Shaders/*.frag)
  
set(SHADER_COMPILER glslc)
foreach(SHADER_PATH ${VERTEX_SHADERS})
    string(REGEX REPLACE ".+/(.+)" "\\1" SHADER_NAME ${SHADER_PATH})
    execute_process(COMMAND ${SHADER_COMPILER} ${SHADER_PATH} -o ${CMAKE_CURRENT_BINARY_DIR}/${SHADER_NAME}.spv)
#    file(COPY ${CMAKE_CURRENT_BINARY_DIR}/${SHADER_NAME}.spv DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endforeach(SHADER_PATH)

foreach(SHADER_PATH ${FRAGMENT_SHADERS})
    string(REGEX REPLACE ".+/(.+)" "\\1" SHADER_NAME ${SHADER_PATH})
    execute_process(COMMAND ${SHADER_COMPILER} ${SHADER_PATH} -o ${CMAKE_CURRENT_BINARY_DIR}/${SHADER_NAME}.spv)
#    file(COPY ${CMAKE_CURRENT_BINARY_DIR}/${SHADER_NAME}.spv DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
endforeach(SHADER_PATH) 